<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_activity"
        android:enabled="true"
        android:icon="@drawable/outline_assignment_black_36"
        android:title="@string/button_bar_acctivity"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_message"
        android:enabled="true"
        android:icon="@drawable/outline_textsms_black_36"
        android:title="@string/button_bar_message"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_friends"
        android:enabled="true"
        android:icon="@drawable/outline_group_black_36"
        android:title="@string/button_bar_friedns"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_nearby"
        android:enabled="true"
        android:icon="@drawable/outline_toys_black_36"
        android:title="@string/button_bar_nearby"
        app:showAsAction="ifRoom" />
</menu>