<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".Login.Login"
    android:background="@drawable/login_background">
    <!-- 填空card-->
    <android.support.v7.widget.CardView
        android:id="@+id/login_Card0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        >
    </android.support.v7.widget.CardView>
    <!-- 账户card-->
    <android.support.v7.widget.CardView
        android:id="@+id/login_Card1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="12dp"
        >
        <EditText
            android:id="@+id/login_edit_account"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@null"
            android:hint="@string/account"
            android:gravity="center"
            android:textSize="16sp">
        </EditText>
    </android.support.v7.widget.CardView>
    <!-- 密码card-->
    <android.support.v7.widget.CardView
        android:id="@+id/login_Card2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="12dp"
        >
        <EditText
            android:id="@+id/login_edit_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@null"
            android:hint="@string/password"
            android:gravity="center"
            android:textSize="16sp"
            android:inputType="textPassword">
        </EditText>
    </android.support.v7.widget.CardView>
    <!-- 忘记密码card-->
    <android.support.v7.widget.CardView
        android:id="@+id/login_forget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        app:cardBackgroundColor="@color/transparency"
        app:cardElevation="0dp"
        android:focusable="true"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/forget"
            android:textColor="@color/white"
            android:textSize="12sp"/>
    </android.support.v7.widget.CardView>
    <!-- 登陆card-->
    <android.support.v7.widget.CardView
        android:id="@+id/login_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="12dp"
        app:cardBackgroundColor="@color/blue2C83DB"
        android:focusable="true"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="16sp"/>
    </android.support.v7.widget.CardView>
    <!-- 注册card-->
    <android.support.v7.widget.CardView
        android:id="@+id/login_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        app:cardBackgroundColor="@color/transparency"
        app:cardElevation="0dp"
        android:focusable="true"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="12sp"/>
    </android.support.v7.widget.CardView>
</LinearLayout>