<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grayF1F1F1"
    android:orientation="vertical"
    tools:context=".RekoActovity.Create_Acitvity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="24dp"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">\

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    //标语
                    <android.support.v7.widget.CardView
                        android:id="@+id/cratet_activity_top_backdop"
                        android:layout_width="match_parent"
                        android:layout_height="140dp"
                        android:layout_marginTop="50dp"
                        android:background="@color/white"
                        app:cardCornerRadius="18dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <android.support.v7.widget.CardView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginTop="52dp"
                                app:cardBackgroundColor="@color/redFC766A"
                                app:cardCornerRadius="18dp">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="40dp"
                                    android:gravity="center"
                                    android:text="@string/create_my_activtiy"
                                    android:textColor="@color/white"
                                    android:textSize="20sp" />
                            </android.support.v7.widget.CardView>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="16dp"
                                android:gravity="center"
                                android:orientation="horizontal">

                                <de.hdodenhof.circleimageview.CircleImageView
                                    android:layout_width="16dp"
                                    android:layout_height="16dp"
                                    android:layout_gravity="center_horizontal"
                                    android:layout_marginRight="8dp"
                                    android:scaleType="centerCrop"
                                    android:src="@color/blue3B5999" />

                                <de.hdodenhof.circleimageview.CircleImageView
                                    android:layout_width="16dp"
                                    android:layout_height="16dp"
                                    android:layout_gravity="center_horizontal"
                                    android:layout_marginRight="8dp"
                                    android:scaleType="centerCrop"
                                    android:src="@color/blue55ACEE" />

                                <de.hdodenhof.circleimageview.CircleImageView
                                    android:layout_width="16dp"
                                    android:layout_height="16dp"
                                    android:layout_gravity="center_horizontal"
                                    android:scaleType="centerCrop"
                                    android:src="@color/redDD4B39" />

                            </LinearLayout>
                        </LinearLayout>
                    </android.support.v7.widget.CardView>
                </RelativeLayout>
                //头像

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/userdetail_portrait"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_gravity="center_horizontal"
                    android:scaleType="centerCrop"
                    android:src="@drawable/default_portrati"
                    app:civ_border_color="@color/white"
                    app:civ_border_width="3dp" />
            </FrameLayout>
            //framelayout 可以进行重叠布局

            //输入框
            //活动名称

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/transparency"
                app:cardElevation="0dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@string/create_my_activtiyName"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/create_my_activtiyName"
                android:layout_width="match_parent"
                android:layout_height="40dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/edittext_border_white"
                    android:textSize="16sp">
                </EditText>
            </android.support.v7.widget.CardView>
            //活动简介

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/transparency"
                app:cardElevation="0dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@string/create_my_activtiyIntro"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/create_my_activtiyIntro"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:background="@drawable/edittext_border_white"
                    android:textSize="16sp">
                </EditText>
            </android.support.v7.widget.CardView>
            //活动人数

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/transparency"
                app:cardElevation="0dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@string/create_my_activtiyUserNumber"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/create_my_activtiyUserNumber"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/edittext_border_white"
                    android:textSize="16sp">

                </EditText>
            </android.support.v7.widget.CardView>
            //活动详情说明

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/transparency"
                app:cardElevation="0dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@string/create_my_activtiyDetail"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/create_my_activtiyDetail"
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:background="@drawable/edittext_border_white"
                    android:hint="@string/create_my_detail_hint"
                    android:textSize="16sp">

                </EditText>
            </android.support.v7.widget.CardView>
            //活动照片显示

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/transparency"
                app:cardElevation="0dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@string/create_my_activtiyPhoto"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="150dp">

                <ImageView
                    android:id="@+id/uploading_picture"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"></ImageView>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/uploading_picture_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="30dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/blue2C83DB">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/create_my_activtiyUploadiPicture"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </android.support.v7.widget.CardView>
            //活动标签
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/transparency"
                app:cardElevation="0dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@string/create_my_acvtivtyLabel"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/edittext_border_white"
                    android:textSize="16sp"
                    android:hint="@string/create_my_acvtivtyLabel_hint">

                </EditText>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="100dp">

            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>