<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register_background"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".Login.Login">
    <!-- 底盘card-->
    <android.support.v7.widget.CardView
        android:id="@+id/register_card0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        >
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:id="@+id/register_card1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="20dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="12dp"
        app:cardElevation="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <!-- 标题card-->
            <android.support.v7.widget.CardView
                android:id="@+id/register_card2"
                android:layout_width="match_parent"
                android:layout_height="40.35dp"
                app:cardBackgroundColor="@color/grayF1F1F1"
                app:cardCornerRadius="12dp"
                app:cardElevation="12dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/register_title"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </android.support.v7.widget.CardView>
            <!-- 账号文本card-->
            <android.support.v7.widget.CardView
                android:id="@+id/register_card3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="30dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/transparency"
                app:cardElevation="0dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@string/account"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:id="@+id/register_card4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                >
                <EditText
                    android:id="@+id/register_edit_account"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:textSize="16sp"
                    android:background="@drawable/edittext_border">
                </EditText>
            </android.support.v7.widget.CardView>
            <!-- 密码文本card-->
            <android.support.v7.widget.CardView
                android:id="@+id/register_card5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="30dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/transparency"
                app:cardElevation="0dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@string/password"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:id="@+id/register_card6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                >
                <EditText
                    android:id="@+id/register_edit_password"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:textSize="16sp"
                    android:inputType="textPassword"
                    android:background="@drawable/edittext_border">
                </EditText>
            </android.support.v7.widget.CardView>
            <!-- 确认密码文本card-->
            <android.support.v7.widget.CardView
                android:id="@+id/register_card7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="30dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/transparency"
                app:cardElevation="0dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@string/affirm_password"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:id="@+id/register_card8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                >
                <EditText
                    android:id="@+id/register_edit_check_password"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:textSize="16sp"
                    android:inputType="textPassword"
                    android:background="@drawable/edittext_border">
                </EditText>
            </android.support.v7.widget.CardView>
            <!-- 查看安全协议 card-->
            <android.support.v7.widget.CardView
                android:id="@+id/register_check_securityProtocol"
                android:layout_marginTop="40dp"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:layout_width="match_parent"
                android:layout_height="40.35dp"
                app:cardBackgroundColor="@color/gray9A9A9A"
                app:cardCornerRadius="12dp"
                app:cardElevation="12dp"
                android:focusable="true"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/check_securityProtocol"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </android.support.v7.widget.CardView>
            <!-- 勾选确认协议 card-->
            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:orientation="horizontal">

                <android.support.v7.widget.CardView
                    android:id="@+id/register_card9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/transparency"
                    app:cardElevation="0dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="24dp"
                        android:layout_marginRight="5dp"
                        android:gravity="center"
                        android:text="@string/check_look_securityProtocol"
                        android:textColor="@color/black"
                        android:textSize="12sp" />
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/register_check_look_securityProtocol"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginRight="20dp">

                    <ImageView
                        android:id="@+id/check_protocol_image"
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/check1_no" />
                </android.support.v7.widget.CardView>
            </LinearLayout>
            <!-- 创建新用户card-->
            <android.support.v7.widget.CardView
                android:id="@+id/register_createUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="12dp"
                app:cardBackgroundColor="@color/blue2C83DB"
                android:focusable="true"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/create_newUser"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="30dp">
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
